# polgeo

./: .gitignore  flake.nix  shell.nix
annealer/: .gitignore  Cargo.toml  flake.nix  nohup.out  pyproject.toml
annealer/python/: shell.nix  solver.py
annealer/results/: solutions2_pop_constr.json  solutions2_pop_obj.json  solutions3_pop_constr.json  solutions3_pop_obj.json  solutions4_pop_constr.json  solutions4_pop_obj.json
annealer/src/: adjacency.rs  anneal.rs  anneal_step.rs  init.rs  init_precinct.rs  lib.rs  main.rs  rand.rs  vec3.rs
annealer/tests/: small_examples.rs
models/: bad.keras  geoparams.keras
notes/: Compactness.md  Heuristics.md  NeuralNet.md  Optimization.md  Overview.md  Sampling.md  latexindent.yaml  paper.tex
shp_raster/: Cargo.toml
shp_raster/src/: csv.rs  image.rs  main.rs  raster.rs
sim-anneal/: Cargo.toml  pyproject.toml  shell.nix
sim-anneal/src/: anneal.rs  lib.rs
src/: badhist.py  compactness_scores.py  geometric_parameter.py  image_nn.py  load_data.py  rdata.py  svr_geoparams.py  test.py
