[package]
name = "annealer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "annealer"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
dbase = "0.5.0"
geo = "0.28.0"
itertools = "0.13.0"
nalgebra = "0.33.0"
serde_json = "1.0.125"
shapefile = "0.6.0"
ame = "annealer"
# log = "0.4.22"
# pyo3 = "0.21.1"
# pyo3-log = "0.11.0"
